fix alignnment

--- a/site/web/app/themes/takecare-io/assets/src/styles/partials/_page.scss
+++ b/site/web/app/themes/takecare-io/assets/src/styles/partials/_page.scss
@@ -3,15 +3,9 @@ article.page-content {
 
 	.content {
 		width: 100%;
-		text-align: left;
 
 		.header_txt_gone {
 			@include media-breakpoint-down(xs) {
-			}
-		}
-
-		p {
-			&:last-child {
 			}
 		}
 	}
